// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly size medium 1`] = `
<DocumentFragment>
  .cache-cyd1u6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151A2D;
  background-color: #F6F6F8;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-cyd1u6"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size rounded 1`] = `
<DocumentFragment>
  .cache-1ivb7gt {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151A2D;
  background-color: #F6F6F8;
  border-radius: 8px;
  font-size: 10px;
  height: 16px;
  padding: 2px 6px;
  text-transform: uppercase;
}

<span
    class="egvl2gp0 cache-1ivb7gt"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size small 1`] = `
<DocumentFragment>
  .cache-h4d57d {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151A2D;
  background-color: #F6F6F8;
  font-size: 12px;
  line-height: 24px;
  height: 24px;
}

<span
    class="egvl2gp0 cache-h4d57d"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size xsmall 1`] = `
<DocumentFragment>
  .cache-14raypl {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151A2D;
  background-color: #F6F6F8;
  border-radius: 4px;
  font-size: 12px;
  line-height: 18px;
  height: 18px;
}

<span
    class="egvl2gp0 cache-14raypl"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly size xxsmall 1`] = `
<DocumentFragment>
  .cache-1a7ae93 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151A2D;
  background-color: #F6F6F8;
  border-radius: 4px;
  font-size: 10px;
  line-height: 16px;
  height: 16px;
  padding: 0 6px;
}

<span
    class="egvl2gp0 cache-1a7ae93"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant beta 1`] = `
<DocumentFragment>
  .cache-14d9uj0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #FF8C69;
  color: #FFFFFF;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="beta"
    class="egvl2gp0 cache-14d9uj0"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant error 1`] = `
<DocumentFragment>
  .cache-1ao2tvw {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #DD3252;
  color: #FFFFFF;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="error"
    class="egvl2gp0 cache-1ao2tvw"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-16u820x {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #3F6ED8;
  color: #FFFFFF;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="info"
    class="egvl2gp0 cache-16u820x"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-beta 1`] = `
<DocumentFragment>
  .cache-1h42nrs {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #FF8C69;
  background-color: #FFEFE6;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="beta"
    class="egvl2gp0 cache-1h42nrs"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-error 1`] = `
<DocumentFragment>
  .cache-ohtm3d {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #DD3252;
  background-color: #FFE1E7;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="error"
    class="egvl2gp0 cache-ohtm3d"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-info 1`] = `
<DocumentFragment>
  .cache-1b35wa4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #3F6ED8;
  background-color: #E1EBFF;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="info"
    class="egvl2gp0 cache-1b35wa4"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-neutral 1`] = `
<DocumentFragment>
  .cache-1su42ml {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4A4F62;
  background-color: #F6F6F8;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-1su42ml"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-primary 1`] = `
<DocumentFragment>
  .cache-xwzhkl {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #4F0599;
  background-color: #EEEEFF;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-xwzhkl"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant light-success 1`] = `
<DocumentFragment>
  .cache-1thk4u0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #22C8A2;
  background-color: #EAFFFB;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="success"
    class="egvl2gp0 cache-1thk4u0"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant neutral 1`] = `
<DocumentFragment>
  .cache-cyd1u6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151A2D;
  background-color: #F6F6F8;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-cyd1u6"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant primary 1`] = `
<DocumentFragment>
  .cache-1746drj {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #4F0599;
  color: #FFFFFF;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-1746drj"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-1l6pzxo {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #22C8A2;
  color: #FFFFFF;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="success"
    class="egvl2gp0 cache-1l6pzxo"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-1ao2tvw {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: #DD3252;
  color: #FFFFFF;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    aria-label="warning"
    class="egvl2gp0 cache-1ao2tvw"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;

exports[`Badge renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-cyd1u6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  color: #151A2D;
  background-color: #F6F6F8;
  font-size: 14px;
  line-height: 32px;
  height: 32px;
}

<span
    class="egvl2gp0 cache-cyd1u6"
    role="status"
  >
    Sample badge
  </span>
</DocumentFragment>
`;
